fix tree & datatable ajax to post

--- a/Riskvalve/Views/AssetRegister/Asset.cshtml
+++ b/Riskvalve/Views/AssetRegister/Asset.cshtml
@@ -108,7 +108,7 @@
                 "order": [1],
                 "ajax": {
                     "url": "@urlassetdatatable",
-                    "type": "GET",
+                    "type": "POST",
                     "datatype": "json",
                     "data": function (d) {
                         d.searchValue = $('#assetTable').DataTable().search();
