--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -388,9 +388,9 @@
                 <td colspan="4" class="table-section sub-section">Approved By</td>
             </tr>
             <tr>
-                <td colspan="4">Septian A.p</td>
-                <td colspan="4">Septian A.p</td>
-                <td colspan="4">Septian A.p</td>
+                <td colspan="4">&nbsp;</td>
+                <td colspan="4">&nbsp;</td>
+                <td colspan="4">&nbsp;</td>
             </tr>
         </table>
     </div>
