--- a/Riskvalve/Views/Shared/InspectionAssessmentSidebar.cshtml
+++ b/Riskvalve/Views/Shared/InspectionAssessmentSidebar.cshtml
@@ -165,7 +165,7 @@
                     data.forEach(function (item) {
                         const newLiElement = `<li class="child-data-entry">
                                                 <a class="btn-add-new-inspection" history-button 
-                                                    attr-id="${item.Id}"
+                                                    attr-id="${item.AssetID}"
                                                     attr-sidebar-level="4"
                                                     attr-inspection-id="${item.Id}"
                                                     attr-name="${item.Asset} ${item.Name}" 
